# backend/api/gen/go/app/service/v1/i_dict_entry_lookup_http.pb.go
@@ -1,0 +1,79 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: app/service/v1/i_dict_entry_lookup.proto
+
+package apppb
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	v1 "go-wind-erp/api/gen/go/dict/service/v1"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationDictEntryLookupListByTypeCode = "/app.service.v1.DictEntryLookup/ListByTypeCode"
+
+type DictEntryLookupHTTPServer interface {
+	// ListByTypeCode 按类型编码查询启用的字典条目（含当前语言翻译）
+	ListByTypeCode(context.Context, *v1.ListDictEntryByTypeCodeRequest) (*v1.ListDictEntryByTypeCodeResponse, error)
+}
+
+func RegisterDictEntryLookupHTTPServer(s *http.Server, srv DictEntryLookupHTTPServer) {
+	r := s.Route("/")
+	r.GET("/app/v1/dict/entries/by-type-code", _DictEntryLookup_ListByTypeCode0_HTTP_Handler(srv))
+}
+
+func _DictEntryLookup_ListByTypeCode0_HTTP_Handler(srv DictEntryLookupHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v1.ListDictEntryByTypeCodeRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDictEntryLookupListByTypeCode)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListByTypeCode(ctx, req.(*v1.ListDictEntryByTypeCodeRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v1.ListDictEntryByTypeCodeResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type DictEntryLookupHTTPClient interface {
+	// ListByTypeCode 按类型编码查询启用的字典条目（含当前语言翻译）
+	ListByTypeCode(ctx context.Context, req *v1.ListDictEntryByTypeCodeRequest, opts ...http.CallOption) (rsp *v1.ListDictEntryByTypeCodeResponse, err error)
+}
+
+type DictEntryLookupHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewDictEntryLookupHTTPClient(client *http.Client) DictEntryLookupHTTPClient {
+	return &DictEntryLookupHTTPClientImpl{client}
+}
+
+// ListByTypeCode 按类型编码查询启用的字典条目（含当前语言翻译）
+func (c *DictEntryLookupHTTPClientImpl) ListByTypeCode(ctx context.Context, in *v1.ListDictEntryByTypeCodeRequest, opts ...http.CallOption) (*v1.ListDictEntryByTypeCodeResponse, error) {
+	var out v1.ListDictEntryByTypeCodeResponse
+	pattern := "/app/v1/dict/entries/by-type-code"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDictEntryLookupListByTypeCode))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
