# backend/app/app/service/cmd/server/wire_gen.go
@@ -50,13 +50,15 @@ func initApp(context *bootstrap.Context) (*kratos.App, func(), error) {
 	stockPickingService := service.NewStockPickingService(context, stockPickingServiceClient)
 	approvalRequestServiceClient := data.NewApprovalRequestServiceClient(context, discovery)
 	approvalRequestService := service.NewApprovalRequestService(context, approvalRequestServiceClient)
+	dictEntryServiceClient := data.NewDictEntryServiceClient(context, discovery)
+	dictEntryLookup := service.NewDictEntryLookup(context, dictEntryServiceClient)
 	purchaseOrderServiceClient := data.NewPurchaseOrderServiceClient(context, discovery)
 	purchaseOrderService := service.NewPurchaseOrderService(context, purchaseOrderServiceClient)
 	payableServiceClient := data.NewPayableServiceClient(context, discovery)
 	payableService := service.NewPayableService(context, payableServiceClient)
 	paymentServiceClient := data.NewPaymentServiceClient(context, discovery)
 	paymentService := service.NewPaymentService(context, paymentServiceClient)
-	httpServer := server.NewRestServer(context, v, authenticationService, fileTransferService, userProfileService, warehouseService, stockQuantService, stockPickingService, approvalRequestService, purchaseOrderService, payableService, paymentService)
+	httpServer := server.NewRestServer(context, v, authenticationService, fileTransferService, userProfileService, warehouseService, stockQuantService, stockPickingService, approvalRequestService, dictEntryLookup, purchaseOrderService, payableService, paymentService)
 	grpcMiddlewares := server.NewGrpcMiddleware(context)
 	grpcServer, err := server.NewGrpcServer(context, grpcMiddlewares)
 	if err != nil {
